; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_unit-name.c_do_escape_char.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_unit-name.c_do_escape_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8, i8*)* @do_escape_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @do_escape_char(i8 signext %0, i8* %1) #0 {
  %3 = alloca i8, align 1
  %4 = alloca i8*, align 8
  store i8 %0, i8* %3, align 1
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = call i32 @assert(i8* %5)
  %7 = load i8*, i8** %4, align 8
  %8 = getelementptr inbounds i8, i8* %7, i32 1
  store i8* %8, i8** %4, align 8
  store i8 92, i8* %7, align 1
  %9 = load i8*, i8** %4, align 8
  %10 = getelementptr inbounds i8, i8* %9, i32 1
  store i8* %10, i8** %4, align 8
  store i8 120, i8* %9, align 1
  %11 = load i8, i8* %3, align 1
  %12 = sext i8 %11 to i32
  %13 = ashr i32 %12, 4
  %14 = trunc i32 %13 to i8
  %15 = call i8* @hexchar(i8 signext %14)
  %16 = ptrtoint i8* %15 to i8
  %17 = load i8*, i8** %4, align 8
  %18 = getelementptr inbounds i8, i8* %17, i32 1
  store i8* %18, i8** %4, align 8
  store i8 %16, i8* %17, align 1
  %19 = load i8, i8* %3, align 1
  %20 = call i8* @hexchar(i8 signext %19)
  %21 = ptrtoint i8* %20 to i8
  %22 = load i8*, i8** %4, align 8
  %23 = getelementptr inbounds i8, i8* %22, i32 1
  store i8* %23, i8** %4, align 8
  store i8 %21, i8* %22, align 1
  %24 = load i8*, i8** %4, align 8
  ret i8* %24
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i8* @hexchar(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
